[package]
name = "procmon"
version = "0.1.0"
authors = ["Matias Fontanini <matias.fontanini@gmail.com>"]
edition = "2018"

[build-dependencies]
cargo-bpf = { version = "1.3.0", default-features = false, features = ["build"] }

[dependencies]
libc = "0.2"
log = "0.4.14"
probes = { path = "./probes" }
redbpf = { version = "1.3.0", features = ["load"] }
simple_logger = "1.11.0"
tokio = { version = "0.2.25", features = ["macros"] }
futures = "^0.3"
