[package]
name = "probes"
version = "0.1.0"
edition = '2018'
authors = ["Matias Fontanini <matias.fontanini@gmail.com>"]

[build-dependencies]
cargo-bpf = { version = "1.3.0", default-features = false, features = ["bindings"] }

[dependencies]
cty = "0.2"
redbpf-macros = "1.3.0"
redbpf-probes = "1.3.0"

[features]
default = []
probes = ["no-std"]
no-std = []

[lib]
path = "src/lib.rs"

[[bin]]
name = "sockets"
path = "src/sockets/main.rs"
required-features = ["probes"]
